Starred new project

--- a/package.json
+++ b/package.json
@@ -1,15 +1,34 @@
 {
-  "name": "saintspyridonchurch",
+  "name": "sacreva",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://metropolitanhost.com/themes/themeforest/react/sacreva/",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/user-event": "^12.8.3",
+    "bootstrap": "^5.1.0",
+    "chart.js": "^3.5.1",
+    "jquery": "^3.6.0",
+    "magnific-popup": "^1.1.0",
+    "plyr-react": "^3.1.0",
+    "postcss-custom-properties": "^10.0.0",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.6.1",
+    "react-chartjs-2": "^3.0.4",
+    "react-countdown": "^2.3.2",
+    "react-countup": "^5.2.0",
     "react-dom": "^17.0.2",
+    "react-google-recaptcha": "^2.1.0",
+    "react-ion-slider": "^1.0.17",
+    "react-js-pagination": "^3.0.3",
+    "react-meta-tags": "^1.0.1",
+    "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.0.1"
+    "react-slick": "^0.28.1",
+    "react-visibility-sensor": "^5.1.1",
+    "slick-carousel": "^1.8.1",
+    "web-vitals": "^1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
